# lol-meta-tracker

./: .gitignore  README.md  pyproject.toml
.devcontainer/: devcontainer.json
.github/workflows/: daily-report.yml  weekly-report.yml
artifact/: artifact-v2.html  artifact-v5.html  build_evo_panel2.py  build_evo_panel3.py
data/processed/: ban_rates.csv  champion_embeddings_v08.npz  draft_model.joblib  draft_model_metrics.json  meta.json  (+17 more)
docs/: 2026-07-22-embeddings-session-learnings.md  2026-07-22-model-ladder-first-principles.md  2026-07-22-soloq-data-research.md  2026-07-23-ban-timesignal-handoff.md  2026-07-23-soloq-scrape-resume-handoff.md  2026-07-23-soloq-synergy-research.md  2026-07-23-step3-execution-handoff.md  2026-07-23-step3-handoff.md  2026-07-23-step3-results.md  2026-07-23-synergy-rung1-handoff.md  2026-07-23-synergy-rung1-results.md  2026-07-23-synergy-rung1b-spec.md  ROADMAP.md  oracle-elixir-definitions.md  riot-api-assessment.md  viz-research-report.md
drafts/: 2026-07-20-meta-entering-summer-debut-thread.md
reports/: 2026-07-18-meta-report.md  2026-07-19-ewc-finals-preview.md  latest.md
scripts/: analyze_meta.py  chart_embeddings_v08.py  common.py  daily_report.py  download_data.py  draft_dataset.py  draft_transformer.py  embedding_evolution_v08.py  experiment_v07.py  experiment_v07b.py  experiment_v08.py  experiment_v09_outcome_baseline.py  experiment_v09_soloq_transfer.py  experiment_v10_synergy_rung1.py  generate_charts.py  riot_soloq_scrape.py  soloq_embedding_rung0.py  train_draft_model.py  train_draft_model_v08.py  weekly_report.py
(+10 files in other folders)
