[project]
name = "lol-meta-tracker"
version = "0.1.0"
description = "Cross-league LoL esports meta tracking: pick/ban rates across LCK, LPL, LEC, LCS from Oracle's Elixir data"
requires-python = ">=3.10"
dependencies = [
    "pandas>=2.0",
    "matplotlib>=3.8",
    "seaborn>=0.13",
    "requests>=2.31",
    "plotly>=5.20",
    "pyarrow>=15.0",
    "scikit-learn>=1.7.2",
    "lightgbm>=4.7.0",
    "torch>=2.13.0",
]

[tool.uv]
package = false

[[tool.uv.index]]
name = "pytorch-cpu"
url = "https://download.pytorch.org/whl/cpu"
explicit = true

[tool.uv.sources]
# CUDA wheels are ~2.5GB and useless on Codespaces CPU boxes; macOS PyPI
# wheels are already CPU-only (the cpu index has no macOS builds).
torch = [{ index = "pytorch-cpu", marker = "sys_platform == 'linux'" }]
